微博表情默认显示表情文本 新增和编辑话题以及动态时，默认显示为图片类型，增加发布时间 列表页，增加详情功能

--- a/app/V/admin/moment_add.html
+++ b/app/V/admin/moment_add.html
@@ -145,6 +145,8 @@ var editor = new wangEditor('contentbox');
         $('#content_text').val(this.$txt.html());
     }
 
+    editor.config.emotionsShow = 'value';
+
     editor.create();
 
 $(':radio[name=datatype]').on('click', function(){
