--- a/app/V/admin/topic_edit.html
+++ b/app/V/admin/topic_edit.html
@@ -173,6 +173,13 @@ var buckets = {
 
 var editor = new wangEditor('contentbox');
 
+    editor.config.emotionsShow = 'value';
+
+    editor.onchange = function(){
+
+        $('#content_text').val(this.$txt.html());
+    }
+
     editor.create();
 
     editor.$txt.html(content);
